Java 13 I guess